--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "scratch",
-  "version": "0.0.0",
+  "name": "manyline",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
